--- a/src/app/components/view/view.component.html
+++ b/src/app/components/view/view.component.html
@@ -1,7 +1,7 @@
 
 <div class="view">
     <div class="view-header">
-        <div><h1>{{titleText}}</h1></div>
+        <div class="title"><h1>{{titleText}}</h1></div>
         <div class="view-actions">
             <ng-content select="[viewActions]"></ng-content>
         </div>
