--- a/src/app/components/view/view.component.scss
+++ b/src/app/components/view/view.component.scss
@@ -20,6 +20,10 @@
         padding-right: 50px;
         justify-content: space-between;
 
+        .title {
+            color:white;
+        }
+
         .view-actions {
             .sh-btn {
                 width: 85px;
