--- a/src/app/components/absent/absent.component.scss
+++ b/src/app/components/absent/absent.component.scss
@@ -10,16 +10,29 @@
       margin-left: 5px;
     }
   }
+  .absent-profiles-container {
+    padding: 20px;
+    font-size: 16px;
 
-  .absent-profile {
-    display: flex;
+    &.no-absence {
 
-    .profile-name {
-      font-size: 14px;
     }
 
-    .description {
-      margin-left: 10px;
+    .absent-profile {
+      display: flex;
+
+      .profile-name {
+        font-weight: bold;
+        cursor: pointer;
+
+        &:hover {
+          color: gray;
+        }
+      }
+
+      .description {
+        margin-left: 10px;
+      }
     }
   }
 }
