--- a/src/app/components/profiles/profiles.component.scss
+++ b/src/app/components/profiles/profiles.component.scss
@@ -11,6 +11,7 @@
             display: flex;
             border-bottom: 2px solid lightgray;
             align-items: center;
+            padding-left: 10px;
 
             &:hover {
                 background-color: lightgray;
