--- a/src/app/components/view/view.component.scss
+++ b/src/app/components/view/view.component.scss
@@ -21,7 +21,7 @@
         justify-content: space-between;
 
         .title {
-            color:white;
+            color:$theme-primary;
         }
 
         .view-actions {
