--- a/src/app/components/sidebar/sidebar.component.scss
+++ b/src/app/components/sidebar/sidebar.component.scss
@@ -5,12 +5,11 @@
   height: 100%;
   display: flex;
   flex-direction: column;
-  background-color: $theme-secondary;
+  background-color: $theme-primary;
 
   .sidebar-header {
     flex: 1;
-    background-color: rgba(255,255,255, 0.35);
-    color:white;
+    color:black;
     display: flex;
     align-items: center;
     padding-left: 20px;
@@ -26,26 +25,25 @@
       display: flex;
       align-items: center;
       text-decoration: none;
-      color: black;
       font-size: 18px;
       cursor: pointer;
-      color:white;
+      color:black;
 
       &.selected {
         border-left: 7px solid $theme-primary;
         padding-left: 8px;
         font-weight: 500;
-        background-color: rgba(255,255,255, 0.35);
+        background-color: $theme-a-secondary;
 
         &:hover {
-          border-left: 7px solid $theme-primary;
-          background-color: rgba(255,255,255, 0.35);
+          border-left: 7px solid $theme-secondary;
+          background-color: $theme-a-secondary;
         }
       }
 
       &:hover {
-        background-color: rgba(255,255,255, 0.35);
-        border-left: 7px solid rgba(255,255,255, 0.35);
+        background-color: $theme-a-secondary;
+        border-left: 7px solid $theme-secondary;
       }
     }
   }
