--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,6 +1,6 @@
 <div class="sidebar">
     <div class="sidebar-header">
-        Shifts planner
+        <img src="../../../assets/logo.png" width="150"/>
     </div>
     <div class="sidebar-body">
         <div *ngFor="let item of items" [routerLink]="item.link" (click)="itemClicked(item)" class="sidebar-item" [class.selected]="item.isSelected">{{item.text}}</div>
