fix wierd error ENOENT

--- a/src/app/components/conditions/conditions.component.html
+++ b/src/app/components/conditions/conditions.component.html
@@ -15,7 +15,13 @@
             <sh-dropdown [options]="days" [(selectedOption)]="selectedDay"></sh-dropdown>
           </div>
         </div>
-        <div class="condition-profession condition-property" *ngIf="selectedConditionType && (selectedConditionType.id == 'Room' || selectedConditionType.id == 'Permanent')">
+          <div class="condition-property" *ngIf="selectedConditionType && selectedConditionType.id == 'Rotation'">
+              <div class="title">Description:</div>
+              <mat-form-field class="example-full-width">
+                  <input matInput placeholder="Description" [(ngModel)]="description">
+              </mat-form-field>
+          </div>
+        <div class="condition-profession condition-property" *ngIf="selectedConditionType">
             <div class="title">Profession:</div>
             <sh-dropdown [options]="tags" [(selectedOption)]="selectedTag"></sh-dropdown>
         </div>
@@ -27,15 +33,22 @@
           <div class="title">Importance:</div>
           <sh-toggle [options]="conditionImportances" [(selectedOptionIndex)]="selectedImportanceIndex"></sh-toggle>
         </div>
-        <div class="sh-btn" (click)="addCondition()">
-          Add Condition
+        <div class="condition-absent condition-property">
+            <div class="title">Absent next day</div>
+            <sh-toggle [options]="absentNextDayOptions" [(selectedOptionIndex)]="selectedIsLockedForNextDayIndex"></sh-toggle>
         </div>
+          <button mat-stroked-button (click)="addCondition()">
+              Add Condition
+          </button>
       </div>
       <div class="conditions-list" *ngIf="conditionsService.state == 'ready'">
           <div viewContent class="table">
               <div class="row title-row">
                   <div class="cell">
                       Type
+                  </div>
+                  <div class="cell">
+                      Description
                   </div>
                   <div class="cell">
                       Room
@@ -52,6 +65,9 @@
                   <div class="cell">
                       Importance
                   </div>
+                  <div class="cell">
+                      Absent next day
+                  </div>
                   <div class="small-cell">
                       Delete
                   </div>
@@ -59,6 +75,9 @@
               <div *ngFor="let condition of allConditions" class="row">
                   <div class="cell">
                       {{condition.type}}
+                  </div>
+                  <div class="cell">
+                      {{condition.description}}
                   </div>
                   <div class="cell">
                       {{condition.room ? condition.room.name : ''}}
@@ -74,6 +93,9 @@
                   </div>
                   <div class="cell">
                       {{condition.importance ? condition.importance : ''}}
+                  </div>
+                  <div class="cell">
+                      {{condition.isLockedForNextDay ? 'Yes' : 'No'}}
                   </div>
                   <div class="small-cell action-cell">
                       <button mat-button (click)="onDeleteCondition(condition)">
