--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -68,6 +68,10 @@
       }
     }
 
+    .date-string {
+      font-size: 12px;
+    }
+
     .show-absent {
       font-size: 14px;
       cursor: pointer;
