--- a/src/app/components/sidebar/sidebar.component.scss
+++ b/src/app/components/sidebar/sidebar.component.scss
@@ -14,10 +14,34 @@
     align-items: center;
     padding-left: 20px;
     font-size: 16px;
+    padding-bottom: 10px;
+    border-bottom: 1px solid lightgray;
+  }
+
+  .sidebar-footer {
+    margin-bottom: 30px;
+    flex:1;
+    .logout-item {
+      padding: 0px 15px;
+      height: 40px;
+      display: flex;
+      align-items: center;
+      font-size: 18px;
+      cursor: pointer;
+      color:black;
+      justify-content: space-between;
+
+      &:hover {
+        background-color: $theme-secondary;
+        color: white;
+      }
+    }
   }
 
   .sidebar-body {
-    flex: 3;
+    flex: 7;
+    border-bottom: 1px solid lightgray;
+    padding-top: 10px;
 
     .sidebar-item {
       padding-left: 15px;
@@ -30,7 +54,7 @@
       color:black;
 
       &.selected {
-        border-left: 7px solid $theme-primary;
+        border-left: 7px solid $theme-secondary;
         padding-left: 8px;
         font-weight: 500;
         background-color: $theme-a-secondary;
