--- a/src/app/components/loading/loading.component.html
+++ b/src/app/components/loading/loading.component.html
@@ -1,3 +1,3 @@
-<div class="sh-loading" *ngIf="this.stateService.appState.appStatus == this.AppStatus.loading">
+<div class="sh-loading">
   <div class="lds-roller"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
 </div>
